Trello #449 Discourse tweaks - topic page - add post number, fix topic-body vertical margins, fix avatar clickability, fix header icon :active state color, fix unnecessary newline for topic meta-data on mobile when user group is long; fix category nav dropdown menu icon size in opened state

--- a/assets/stylesheets/common/components/badges.css.scss
+++ b/assets/stylesheets/common/components/badges.css.scss
@@ -18,11 +18,14 @@
   i.fa {
     line-height: 0; // ensure the icon doesn't increase the height of its inline container element (e.g. in the extra-info in topic page heading, or icons in hamburger header menu causing broken layout)
 
-    &.fa-caret-right {
+    // SP custom rule
+    &.fa-caret-right,
+    &.fa-caret-down { // drowdown in expanded state
       font-size: 18px; // dropdown caret
       vertical-align: -2px;
     }
 
+    // SP custom rule
     &.fa-group {
       font-size: 14px;
       vertical-align: -1px;
